adding information about players' cars

--- a/ADONetApplication/ADONetApplication.csproj
+++ b/ADONetApplication/ADONetApplication.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts.cs" />
+    <Compile Include="Cars.cs" />
     <Compile Include="RageMPDatabase.cs" />
     <Compile Include="Const\DefaultSettings.cs" />
     <Compile Include="Interface\IDbController.cs" />
