--- a/ADONetApplication/App.config
+++ b/ADONetApplication/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+<connectionStrings>
+   <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=RageMPDataBase;User ID=Artur;Password=123321"
+       providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
